# Function_optimization

./: .gitignore  CMakeLists.txt  Func_optimi.nb  Q8o1 Q8o2 Q9o1 Q9o2.m  README.md  function_analytical_values.md  main.cpp  main_grad.cpp  main_scan.cpp
Q_pade/: q8e1_fermion.m
functions/: D0.hpp  D2.hpp  Q8o1.hpp  besselK1.hpp  besselK2.hpp  function.hpp
functions_sources/: CMakeLists.txt  D0.cpp  D2.cpp  Q8o1.cpp  besselK1.cpp  besselK2.cpp
include/: abscissa.hpp  besselK1.hpp  epsilon.hpp  functions.hpp  integrator.hpp  integrator_v2.hpp  optimizer.hpp  utils.hpp
sources/: besselK1.cpp  function.cpp  functions.cpp  integrator.cpp  optimizer.cpp  utils.cpp
